[package]
name = "cursor"
version = "0.1.0"
edition = "2021"

[dependencies]
bb8-redis = "0.18.0"
color-eyre = "0.6.3"
crossterm = "0.28.1"
ctrlc = "3.4.5"
flate2 = "1.0.35"
ratatui = "0.29.0"
redis = { version = "0.27.6", features = ["tokio-comp"] }
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json"] }
scraper = "0.21.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
url = "2.5.4"
